--- a/pom.xml
+++ b/pom.xml
@@ -333,37 +333,11 @@
       <version>1.8.0.1</version>
       <scope>test</scope>
     </dependency>
-    <!--
-    <dependency>
-      <groupId>com.oracle</groupId>
-      <artifactId>classes12</artifactId>
-      <version>8.1.7.1</version>
-      <scope>test</scope>
-    </dependency>
-    -->
     <dependency>
       <groupId>com.oracle</groupId>
       <artifactId>ojdbc14</artifactId>
       <version>10.2.0.4.0</version>
-      <scope>test</scope>
-    </dependency>
-    <!--
-    <dependency>
-      <groupId>com.oracle</groupId>
-      <artifactId>ojdbc6</artifactId>
-      <version>11.1.0.7.0</version>
-      <scope>test</scope>
-    </dependency>
-    -->
-    <dependency>
-      <!--
-        Only needed when "profile.properties" is set to "derby"
-        environment
-      -->
-      <groupId>org.apache.derby</groupId>
-      <artifactId>derby</artifactId>
-      <version>10.4.1.3</version>
-      <scope>test</scope>
+      <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>gsbase</groupId>
@@ -696,6 +670,30 @@
         <database.password>${database.oracle.password}</database.password>
         <database.unsupportedFeatures>${database.oracle.unsupportedFeatures}</database.unsupportedFeatures>
       </properties>
+      <dependencies>
+        <dependency>
+          <!--
+          <dependency>
+            <groupId>com.oracle</groupId>
+            <artifactId>classes12</artifactId>
+            <version>8.1.7.1</version>
+            <scope>test</scope>
+          </dependency>
+          -->
+          <groupId>com.oracle</groupId>
+          <artifactId>ojdbc14</artifactId>
+          <version>10.2.0.4.0</version>
+          <scope>test</scope>
+        </dependency>
+        <!--
+        <dependency>
+          <groupId>com.oracle</groupId>
+          <artifactId>ojdbc6</artifactId>
+          <version>11.1.0.7.0</version>
+          <scope>test</scope>
+        </dependency>
+        -->
+      </dependencies>
     </profile>
     <profile>
       <id>mysql</id>
@@ -744,6 +742,14 @@
         <database.password>${database.derby.password}</database.password>
         <database.unsupportedFeatures>${database.derby.unsupportedFeatures}</database.unsupportedFeatures>
       </properties>
+      <dependencies>
+        <dependency>
+          <groupId>org.apache.derby</groupId>
+          <artifactId>derby</artifactId>
+          <version>10.4.1.3</version>
+          <scope>test</scope>
+        </dependency>
+      </dependencies>
     </profile>
     <profile>
       <id>postgresql</id>
